{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 34,
  "lineage": "63323a63-17c9-d8de-97b8-f86c426c23b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba2f925ef8e6a723",
            "arn": "arn:aws:ec2:eu-central-1:727646485811:elastic-ip/eipalloc-0ba2f925ef8e6a723",
            "association_id": "eipassoc-06778becbc475e4d5",
            "domain": "vpc",
            "id": "eipalloc-0ba2f925ef8e6a723",
            "instance": "i-0bf32b70cb936e044",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0d0d78871887ff49c",
            "private_dns": "ip-10-0-1-11.eu-central-1.compute.internal",
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-3-125-206-155.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.206.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2",
            "aws_security_group.sg_ec2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b74f796d330ab49c",
            "arn": "arn:aws:ec2:eu-central-1:727646485811:instance/i-0bf32b70cb936e044",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf32b70cb936e044",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kirill-key-linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0d78871887ff49c",
            "private_dns": "ip-10-0-1-11.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07746f8e149cce16d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00839e8a8a99fbeb4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0629fbdfe2ec7e4e2",
            "tags": {
              "Name": "kirill-ec2"
            },
            "tags_all": {
              "Name": "kirill-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00839e8a8a99fbeb4"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_ec2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646485811:internet-gateway/igw-03cff960e2499430f",
            "id": "igw-03cff960e2499430f",
            "owner_id": "727646485811",
            "tags": {
              "Name": "kirill-eks-igw"
            },
            "tags_all": {
              "Name": "kirill-eks-igw"
            },
            "vpc_id": "vpc-024acb05b55bfb662"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646485811:route-table/rtb-0e503ba398f77f880",
            "id": "rtb-0e503ba398f77f880",
            "owner_id": "727646485811",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03cff960e2499430f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kirill-eks-public-rt"
            },
            "tags_all": {
              "Name": "kirill-eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-024acb05b55bfb662"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061617ef5d02241fe",
            "route_table_id": "rtb-0e503ba398f77f880",
            "subnet_id": "subnet-0629fbdfe2ec7e4e2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public-subnet-1",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055946e7158ddfe6d",
            "route_table_id": "rtb-0e503ba398f77f880",
            "subnet_id": "subnet-06335158842180825"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public-subnet-2",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646485811:security-group/sg-00839e8a8a99fbeb4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00839e8a8a99fbeb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "86.101.127.195/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kirill-ec2-sg",
            "name_prefix": "",
            "owner_id": "727646485811",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024acb05b55bfb662"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646485811:subnet/subnet-030786d45be091b0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030786d45be091b0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646485811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kirill-eks-sb-private-1",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "kirill-eks-sb-private-1",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-024acb05b55bfb662"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646485811:subnet/subnet-077991a37c484416d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077991a37c484416d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646485811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kirill-eks-sb-private-2",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "kirill-eks-sb-private-2",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-024acb05b55bfb662"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646485811:subnet/subnet-0629fbdfe2ec7e4e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0629fbdfe2ec7e4e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646485811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kirill-eks-sb-public-1",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "kirill-eks-sb-public-1",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-024acb05b55bfb662"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646485811:subnet/subnet-06335158842180825",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06335158842180825",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646485811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kirill-eks-sb-public-2",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "kirill-eks-sb-public-2",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-024acb05b55bfb662"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646485811:vpc/vpc-024acb05b55bfb662",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0135556f6eaca2ee8",
            "default_route_table_id": "rtb-0e4371630c9432123",
            "default_security_group_id": "sg-0367d835a69e33885",
            "dhcp_options_id": "dopt-0780917bed624298d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024acb05b55bfb662",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e4371630c9432123",
            "owner_id": "727646485811",
            "tags": {
              "Name": "kirill-eks-vpc"
            },
            "tags_all": {
              "Name": "kirill-eks-vpc"
            }
          }
        }
      ]
    }
  ]
}